// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBlock #alignment 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt="Test alt"
        src="http://www.example.com/example.png"
      />
    </span>
  </div>
  <div
    className="RichEditor-media-options"
  >
    <div
      className="RichEditor-grid"
    >
      <div
        className="RichEditor-col"
      >
        <label
          className="u-block"
        >
          <h4>
            Alt text
          </h4>
          <p>
            <input
              onChange={[Function]}
              type="text"
              value="Test alt"
            />
          </p>
        </label>
      </div>
      <div
        className="RichEditor-col"
      >
        <h4>
          Image alignment
        </h4>
        <p>
          <label
            key="left"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="left"
            />
            Left
          </label>
          <label
            key="right"
          >
            <input
              checked={true}
              onChange={[Function]}
              type="radio"
              value="right"
            />
            Right
          </label>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageBlock #entityConfig.icon 1`] = `
<div>
  <span
    className="RichEditor-media-icon"
  >
    <Icon
      className={null}
      icon="#icon-image"
      title={null}
    />
  </span>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt="Test alt"
        src="http://www.example.com/example.png"
      />
    </span>
  </div>
</div>
`;

exports[`ImageBlock #entityConfig.imageFormats 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[Function]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt="Test alt"
        src="http://www.example.com/example.png"
      />
    </span>
  </div>
  <div
    className="RichEditor-media-options"
  >
    <div
      className="RichEditor-grid"
    >
      <div
        className="RichEditor-col"
      >
        <label
          className="u-block"
        >
          <h4>
            Alt text
          </h4>
          <p>
            <input
              onChange={[Function]}
              type="text"
              value="Test alt"
            />
          </p>
        </label>
      </div>
      <div
        className="RichEditor-col"
      >
        <h4>
          Image alignment
        </h4>
        <p>
          <label
            key="left"
          >
            <input
              checked={false}
              onChange={[Function]}
              type="radio"
              value="left"
            />
            Left
          </label>
          <label
            key="right"
          >
            <input
              checked={true}
              onChange={[Function]}
              type="radio"
              value="right"
            />
            Right
          </label>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageBlock #isActive 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt="Test alt"
        src="http://www.example.com/example.png"
      />
    </span>
  </div>
  <div
    className="RichEditor-media-options"
  >
    <div
      className="RichEditor-grid"
    >
      <div
        className="RichEditor-col"
      >
        <label
          className="u-block"
        >
          <h4>
            Alt text
          </h4>
          <p>
            <input
              onChange={[Function]}
              type="text"
              value="Test alt"
            />
          </p>
        </label>
      </div>
      <div
        className="RichEditor-col"
      >
        <h4>
          Image alignment
        </h4>
        <p />
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageBlock basic 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt="Test alt"
        src="http://www.example.com/example.png"
      />
    </span>
  </div>
</div>
`;

exports[`ImageBlock empty #isActive 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt=""
      />
    </span>
  </div>
  <div
    className="RichEditor-media-options"
  >
    <div
      className="RichEditor-grid"
    >
      <div
        className="RichEditor-col"
      >
        <label
          className="u-block"
        >
          <h4>
            Alt text
          </h4>
          <p>
            <input
              onChange={[Function]}
              type="text"
              value=""
            />
          </p>
        </label>
      </div>
      <div
        className="RichEditor-col"
      >
        <h4>
          Image alignment
        </h4>
        <p />
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageBlock empty 1`] = `
<div>
  <div
    className="RichEditor-media-container"
    onClick={[MockFunction]}
  >
    <span
      className="RichEditor-media-preview"
    >
      <img
        alt=""
      />
    </span>
  </div>
</div>
`;
